option('build-cli', type: 'boolean', value: true, description: 'Build CLI tools')
option('build-mcp-server', type: 'boolean', value: true, description: 'Build MCP server')
option('enable-tui', type: 'boolean', value: false, description: 'Enable TUI features in CLI')
option('enable-lzma', type: 'feature', value: 'auto', description: 'Enable LZMA via liblzma (xz)')
option('enable-onnx', type: 'feature', value: 'auto', description: 'ONNX Runtime integration in vector library (auto-detect)')
option('sqlite-vec-source-dir', type: 'string', value: '', description: 'Path to sqlite-vec source directory (with sqlite-vec.c)')
option('require-sqlite-vec', type: 'boolean', value: true, description: 'Require vendored sqlite-vec.c to build vector DB statically; when true and sources are missing, Meson will error out (recommended for clean, consistent builds). Set to false only if providing a runtime module via YAMS_SQLITE_VEC_MODULE or intentionally disabling vectors for dev/test.')
option('conan-generators-dir', type: 'string', value: '', description: 'Optional path (relative to source root) to Conan generator outputs; when empty Meson searches under the build directory (e.g. build/debug/conan).')
option('cli11-cmake-path', type: 'string', value: '', description: 'Optional path to CLI11 CMake package directory (e.g., /opt/homebrew/Cellar/cli11/2.4.1/lib/cmake/CLI11). When set, Meson will add this to cmake_module_path for CLI11 discovery.')
option('onnxruntime-cmake-path', type: 'string', value: '', description: 'Optional path to onnxruntime CMake package dir (e.g., /opt/homebrew/opt/onnxruntime/lib/cmake/onnxruntime). Used to augment cmake_module_path for ORT discovery in Meson.')
option('build-plugins', type: 'boolean', value: true, description: 'Build plugins under plugins/')
option('plugin-s3', type: 'boolean', value: true, description: 'Build object_storage_s3 plugin')
option('plugin-pdf', type: 'boolean', value: true, description: 'Build PDF extractor plugin (requires pdfium and app/services)')
option('plugin-onnx', type: 'boolean', value: true, description: 'Build ONNX plugin (requires onnxruntime and vector lib)')
option('build-tests', type: 'boolean', value: false, description: 'Build unit/integration tests under tests/')
option('yams-version', type: 'string', value: '', description: 'Override runtime/display version (falls back to project version when empty). A generated header will expose this.')
